fixed the issue with heading alignment on console app

--- a/console/src/views/Settings.module.less
+++ b/console/src/views/Settings.module.less
@@ -31,7 +31,6 @@
 	}
 
 	.applySkins({
-		.header,
 		.item {
 			border-bottom: @agate-header-border-bottom-width solid @agate-heading-border-color;
 		}
